# rockchip-linux-rtos-components-audio

./: .gitignore  AudioConfig.c  AudioConfig.h  CMakeLists.txt  DCB.c  Kconfig  Makefile  audio_ctrl.c  audio_pcm.c  audio_pcm.h  audio_server.h  audio_server.h.in  audio_src_filter.c  capture_impl.c  compile_linux.sh  compile_rtt.sh  file_preprocessor.c  file_writer.c  http_preprocessor.c  play_amr.c  play_amr.h  play_mp3.c  play_mp3.h  play_pcm.c  play_pcm.h  play_wav.c  play_wav.h  playback_impl.c  player.c  player_test.c  record_amr.c  record_pcm.c  record_wav.c  record_wav.h  recorder.c  recorder_test.c
audio_server/: AudioConfig.c  audio_pcm.h  capture_impl.c  file_writer.c  play_amr.c  play_wav.c  playback_impl.c  record_amr.c  record_pcm.c  record_pcm.h  record_wav.c  record_wav.h  recorder.c  wav_header.c  wav_header.h
audio_server/dsp_include/: filt_22k_to_16k.h  filt_24k_to_16k.h  filt_32k_16k.h
codec/: codec.mk
codec/decode/amr/: amr_dec_hal.cpp
codec/decode/ape/: SConscript  ape_decode.c  ape_decode.h  ape_tag.c  ape_tag.h  play_ape.c
codec/decode/ape/hifi_ape/: ape_tag.c  hifi_ape_ape.c
codec/decode/ape/include/: ape.h  audio_main.h
codec/decode/diff/: SConscript  diff_dec.c
codec/decode/dsd/: SConscript  conststr.h  dsd2pcm_conv.c  dsd2pcm_conv.h  endianess.h
codec/decode/dsf/: SConscript  dsf_dec.c
codec/decode/mp3/: bitstream.c  buffers.c  main.c.test  mp3_hal.c  mp3common.h  mp3dec.c  mp3dec.h  mpadecobjfixpt.h
codec/encode/amr/opencore-amr/test/: wavreader.c
codec/encode/mp3/: SConscript  mp3_enc_hal.c  record_mp3.c
codec/encode/mp3/source/: mp3_enc_bitstream.c  mp3_enc_coder.c  mp3_enc_layer3.c  mp3_enc_loop.c  mp3_enc_table.c  mp3_enc_table1.h  mp3_enc_table2.h  mp3_enc_types.h  mp3_enc_utils.c
codec/encode/speex/include/speex/: speex_types.h
codec/encode/speex/libspeex/: fixed_debug.h  kiss_fftr.c  misc.c  stack_alloc.h  vorbis_psy.h
common/: AudioConfig.c  AudioConfig.h  audio_pcm.c  audio_pcm.h  audio_stream.c  capture_impl.c  pcmout.c  platform_linux.c  playback_dump.c  playback_impl.c
dsp_include/: 11k_to_44k.h  11k_to_48k.h  16k_to_44k.h  16k_to_48k.h  22k_to_48k.h  32k_to_44k.h  32k_to_48k.h  44k_to_48k.h  48k_to_44k.h  8k_to_44k.h  8k_to_48k.h  Src.h  filt2000.h  filt_11k_to_16k.h  filt_44100to16000.h  filt_48kto16k.h
misc/: mpadecobjfixpt.h
player/: http_preprocessor.c  play_amr.c  play_mp3.c  player.c
plugins/effect/eq/: Effect.c  effect.h  rk_eq_31.c  rk_eq_asm_opt_24bit.s  rk_eq_asm_opt_24bit_gcc.s
plugins/effect/fade/: Fade.c  Fade.h
plugins/soundtouch/: STTypes.h  TDStretch.c  WavFile.h
plugins/ssrc/: audio_resample_2ch.c  audio_resample_4ch.c
recorder/: record_amr.c  record_wav.c  recorder.c
